updated API
- need to fix room_list_get
- test to finish
