# src/application/src/python-flask-server-generated/swagger_server/models/room_room_name_body.py
@@ -1,64 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class RoomRoomNameBody(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, room_name: str=None):  # noqa: E501
-        """RoomRoomNameBody - a model defined in Swagger
-
-        :param room_name: The room_name of this RoomRoomNameBody.  # noqa: E501
-        :type room_name: str
-        """
-        self.swagger_types = {
-            'room_name': str
-        }
-
-        self.attribute_map = {
-            'room_name': 'room_name'
-        }
-        self._room_name = room_name
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'RoomRoomNameBody':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The Room_room_name_body of this RoomRoomNameBody.  # noqa: E501
-        :rtype: RoomRoomNameBody
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def room_name(self) -> str:
-        """Gets the room_name of this RoomRoomNameBody.
-
-        Name of the room to be created  # noqa: E501
-
-        :return: The room_name of this RoomRoomNameBody.
-        :rtype: str
-        """
-        return self._room_name
-
-    @room_name.setter
-    def room_name(self, room_name: str):
-        """Sets the room_name of this RoomRoomNameBody.
-
-        Name of the room to be created  # noqa: E501
-
-        :param room_name: The room_name of this RoomRoomNameBody.
-        :type room_name: str
-        """
-
-        self._room_name = room_name
